--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
     <title>404</title>
   </head>
   <body>
-    
-<head>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/1779fc5289.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <div class="mainbox">
-    <div class="err">4</div>
-    <i class="fas fa-bolt fa-spin"></i>
-    <i class="far fa-circle"></i>
-    <div class="err2">4</div>
-    <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="#">home</a> and try from there.</p></div>
+    <head>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap"
+        rel="stylesheet"
+      />
+      <script
+        src="https://kit.fontawesome.com/1779fc5289.js"
+        crossorigin="anonymous"
+      ></script>
+    </head>
+    <body>
+      <div class="mainbox">
+        <div class="animated">
+          <div class="err">4</div>
+          <div class="container-row">
+            <div class="layer1">
+              <i class="far fa-circle"></i>
+            </div>
+            <div class="layer2">
+              <div class="bolt"><i class="fas fa-bolt fa-spin"></i></div>
+            </div>
+          </div>
+          <div class="err2">4</div>
+        </div>
+        <div class="msg">
+          Maybe this page moved? Got deleted? Is hiding out in quarantine? Never
+          existed in the first place?
+          <p>Let's go <a href="#">home</a> and try from there.</p>
+        </div>
       </div>
+    </body>
   </body>
 </html>
